--- a/OCR/OCRopus/SegmentationService/templates/index.html
+++ b/OCR/OCRopus/SegmentationService/templates/index.html
@@ -17,17 +17,17 @@
         <h2 align="center">OCR Segmentation Micro-Service</h2>
         <br>
         <h4>GOAL</h4>
-        <p>Extract the individual line images from the binarized image(s).</p>
+        <p>Extract the single-line images from an binarized image.</p>
         
         <h4>USAGE</h4>
         <p>1. Call OCR segmentation micro-service with url: "http://10.5.146.92:8002/segmentationapi".</p>
         <p>2. Input: </p>
         <p class="two_tab">
-            1) The path of the binarized image(s), and uploaded in form style. Usually the images are the output of binarization service with extension ".bin.png".<br>
+            1) The path of an binarized image, uploaded in form style. Usually the image is the output of binarization service with extension ".bin.png".<br>
             2) Optional. Specified parameter valuses which are listed in the following part, and send them in form style.</p>
         <p>3. Output: </p>
-        <p class="two_tab"> A zip file containing equal number of folders to the number of input images. Each folder contains the extracted line images, and usually they are named as {<i>imagename</i>}_01????.bin.png</p>
-        <p>4. E.g. curl -F "<font color="red">image</font>=@<i>path_to_image1</i>" -F "<font color="red">image</font>=@<i>path_to_image2</i>" -F "<font color="red">threshold</font>=0.5" -o <i>name_of_output_file</i> http://10.5.146.92:8002/segmentationapi</p>
+        <p class="two_tab"> A zip file contains the extracted single-line images, and usually they are named as {<i>imagename</i>}_{<i>line NO.</i>}.bin.png</p>
+        <p>4. E.g. curl -F "<font color="red">image</font>=@<i>path_to_image</i>" -F "<font color="red">threshold</font>=0.5" -o <i>name_of_output_file</i> http://10.5.146.92:8002/segmentationapi</p>
 
         <h4>PARAMETERS (#12)</h4>
         <table border="1" cellspacing="0" >
@@ -36,6 +36,12 @@
                 <th>Type</th>
                 <th>Default value</th>
                 <th>Comment</th>
+            </tr>
+            <tr>
+                <td>minscale</td>
+                <td>Float</td>
+                <td align="center">1.0</td>
+                <td>minimum scale permitted</td>
             </tr>
             <tr>
                 <td>maxlines</td>
@@ -103,17 +109,11 @@
                 <td align="center">10.0</td>
                 <td>minimum column height (units=scale)</td>
             </tr>
-            <tr>
-                <td>parallel</td>
-                <td>Integer</td>
-                <td align="center">0</td>
-                <td>number of parallel CPUs to use</td>
-            </tr>
         </table>
 
         <h4><font color="red">NOTE</font></h4>
         <p> 
-            1) The uploaded image(s) must be the binarized image(s).<br> 
-            2) The uploaded image variable name and specified parameters' name must be same with the parameters name in the above table.</p>
+            1) The uploaded image must be an binarized image, and with name/key 'image'.<br> 
+            2) The specified parameters' name must be same with names listed in the above table.</p>
     </body>
 </html>
